MDEV-22884 Assertion `grant_table || grant_table_role' failed on perfschema

when allowing access via perfschema callbacks, update
the cached GRANT_INFO to match